--- a/PPTT/Pages/Administradores/Details.cshtml
+++ b/PPTT/Pages/Administradores/Details.cshtml
@@ -12,50 +12,50 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.Name)
+            @Html.DisplayNameFor(model => model.Admin.Nombre)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.Name)
+            @Html.DisplayFor(model => model.Admin.Nombre)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.Sname)
+            @Html.DisplayNameFor(model => model.Admin.Apellido)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.Sname)
+            @Html.DisplayFor(model => model.Admin.Apellido)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.Dni)
+            @Html.DisplayNameFor(model => model.Admin.DNI)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.Dni)
+            @Html.DisplayFor(model => model.Admin.DNI)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.NumeroControl)
+            @Html.DisplayNameFor(model => model.Admin.Numero_Control)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.NumeroControl)
+            @Html.DisplayFor(model => model.Admin.Numero_Control)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.Email)
+            @Html.DisplayNameFor(model => model.Admin.Correo)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.Email)
+            @Html.DisplayFor(model => model.Admin.Correo)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.DivisionFk)
+            @Html.DisplayNameFor(model => model.Admin.ID_Division_Fk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.DivisionFk)
+            @Html.DisplayFor(model => model.Admin.ID_Division_Fk)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Admin.ServicioFk)
+            @Html.DisplayNameFor(model => model.Admin.ID_Servicio_Fk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Admin.ServicioFk)
+            @Html.DisplayFor(model => model.Admin.ID_Servicio_Fk)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Admin.Id">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Admin.ID_Usuario_Pk">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
