--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -70,9 +70,9 @@
 </form>
 <div class="text-center">
     <h3>Sistema de pedido de trabajos de la fuerza aerea</h3>
-    <a href="/Administradores/Create" class="submit">ABM USUARIOS Crear</a>
-    <a href="/Administradores/Delete" class="submit">ABM USUARIOS Borrar</a>
-    <a href="/Administradores/Details" class="submit">ABM USUARIOS Detalles</a>
-    <a href="/Administradores/Edits" class="submit">ABM USUARIOS Editar</a>
-    <a href="/Administradores/Index" class="submit">ABM USUARIOS Index</a>
+    <a href="/Administradores/Create" class="submit">ABM usuario Crear</a>
+    <a href="/Administradores/Delete" class="submit">ABM usuario Borrar</a>
+    <a href="/Administradores/Details" class="submit">ABM usuario Detalles</a>
+    <a href="/Administradores/Edits" class="submit">ABM usuario Editar</a>
+    <a href="/Administradores/Index" class="submit">ABM usuario Index</a>
 </div>
