--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -64,4 +64,5 @@
 <form method="get">
     <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
     <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
+</form>
 
