se puede cerrar sesion en todos los menus
"

--- a/PPTT/Pages/Vistas/MenuLog.cshtml
+++ b/PPTT/Pages/Vistas/MenuLog.cshtml
@@ -64,3 +64,7 @@
     <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
     <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajos Asignado Para Ti</a>
 </form>
+<div class="centered-button">
+    <form method="post" asp-page-handler="cerrar">
+        <input type="submit" value="Cerrar Sesion" class="submit" />
+    </form>
