--- a/PPTT/Pages/Administradores/Menu.cshtml
+++ b/PPTT/Pages/Administradores/Menu.cshtml
@@ -70,6 +70,9 @@
     <a href="/Administradores/VerPedidosTrabajo" class="submit">Ver Pedidos de Trabajo</a>
     <a href="/Administradores/Estadistica" class="submit">Estadisticas</a>
     <a href="/Administradores/Index" class="submit">ABM USUARIOS Editar</a>
-
 </div>
-
+<div class="centered-button">
+    <form method="post" asp-page-handler="cerrar">
+        <input type="submit" value="Cerrar Sesion" class="submit" />
+    </form>
+</div>
