--- a/PPTT/Pages/Vistas/Orden.cshtml
+++ b/PPTT/Pages/Vistas/Orden.cshtml
@@ -171,7 +171,7 @@
                 <input type="text" id="Correo" name="Correo" value="" required />
             </div>
             <div>
-                <label for="Numero de Control">Numero de Control:</label>
+                <label for="Numero de Control (IOSFA)">Numero de Control:</label>
                 <input type="text" id="Numero de Control" name="NumeroDeControl" value="" required />
             </div>
             <h4>Grado:</h4>
@@ -197,17 +197,17 @@
                 <input type="text" id="RTI" name="RTI" value="" required />
             </div>
             <div>
-                <label for="Numero de tu Oficina">Numero de tu Oficina:</label>
+                <label for="Numero de Oficina Solicitante">Numero de tu Oficina:</label>
                 <input type="text" id="Numero de Oficina" name="NumeroDeOficina" value="" required />
             </div>
-            <h4>Color de tu Oficina:</h4>
+            <h4>Color de Oficina Solicitante:</h4>
             <select id="Color de Oficina" name="ColorDeTuOficina" required>
                 <option value="Civil">Civil</option>
                 <option value="Soldado">Soldado</option>
                 <option value="Brigadier">Brigadier</option>
             </select>
             <div>
-                <label for="Piso Oficina">Piso de tu Oficina:</label>
+                <label for="Piso de Oficina Solicitante">Piso de tu Oficina:</label>
                 <input type="text" id="Piso Oficina" name="PisoTuOficina:" value="" required />
             </div>
             <div>
