haciendo lo de guardar division
por ahora todo roto

--- a/PPTT/Pages/Administradores/Index.cshtml
+++ b/PPTT/Pages/Administradores/Index.cshtml
@@ -70,7 +70,8 @@
                     }
                 </td>          
             <td>
-                             
+                       @*RetornaNombre(item.ID_Servicio_Fk) *@
+                       
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID_Usuario_Pk">Edit</a> |
