--- a/PPTT/Pages/Vistas/MenuLog.cshtml
+++ b/PPTT/Pages/Vistas/MenuLog.cshtml
@@ -68,3 +68,4 @@
     <form method="post" asp-page-handler="cerrar">
         <input type="submit" value="Cerrar Sesion" class="submit" />
     </form>
+</div>
