--- a/PPTT/Pages/Administradores/Edit.cshtml
+++ b/PPTT/Pages/Administradores/Edit.cshtml
@@ -65,6 +65,10 @@
                 <br />
                 <input asp-for="Admin.ID_Rol_Fk" class="form-control" />
                 <span asp-validation-for="Admin.ID_Rol_Fk" class="text-danger"></span>
+
+@*                  <label asp-for="Admin.ID_Password_Fk" class="control-label" style="display: none;"></label>
+                <input asp-for="Admin.ID_Password_Fk" class="form-control" value="" style="display: none;" /> *@
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
