--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -4,8 +4,7 @@
 @{
     ViewData["Title"] = "Crear Usuario";
 }
-<h1>Create</h1>
-<h4>Admin</h4>
+<h3>Create</h3>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -65,7 +64,7 @@
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Volver a la Lista</a>
 </div>
 
 
@@ -191,6 +190,13 @@
             font-weight: bold;
         }
 
+        h3 {
+            font-size: 3em;
+            color: #003d6b;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
         .custom-textarea {
             width: 100%;
             height: 150px;
