--- a/PPTT/Pages/Administradores/Index.cshtml
+++ b/PPTT/Pages/Administradores/Index.cshtml
@@ -22,11 +22,12 @@
     }
 }
 
-<h1>Index</h1>
+<h3>Usuarios</h3>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a class="btn-action" asp-page="Create">Crear Nuevo Usuario</a>
 </p>
+<body>
 <table class="table">
     <thead>
         <tr>
@@ -102,11 +103,149 @@
                     }
                 </td>
                 <td>
-                    <a asp-page="./Edit" asp-route-id="@item.ID_Usuario_Pk">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.ID_Usuario_Pk">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.ID_Usuario_Pk">Delete</a>
+                    <a class="btn-action" asp-page="./Edit" asp-route-id="@item.ID_Usuario_Pk">Editar</a> 
+                    <a class="btn-action" asp-page="./Details" asp-route-id="@item.ID_Usuario_Pk">Detalles</a> 
+                    <a class="btn-action" asp-page="./Delete" asp-route-id="@item.ID_Usuario_Pk">Borrar</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+</body>
+<style>
+    body {
+        align-items: center;
+        justify-content: center;
+        width: 85%;
+        margin: 30px auto;
+        padding: 20px;
+        background-color: #e0e8f1;
+        border: 1px solid #003d6b;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+    }
+    a.btn-action {
+        display: inline-block;
+        text-decoration: none;
+        padding: 8px 12px;
+        margin: 4px;
+        border: 1px solid #003d6b;
+        border-radius: 5px;
+        background-color: #003d6b;
+        color: white; /* Color de texto */
+        transition: background-color 0.3s, transform 0.3s;
+    }
+
+        a.btn-action:hover {
+            background-color: #002e5d; /* Color en hover */
+            transform: translateY(-2px);
+        }
+
+    table {
+        width: 100%;
+        margin-top: 20px;
+        border-collapse: collapse;
+    }
+
+    th, td {
+        padding: 10px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    th {
+        background-color: #e0e8f1; /* Color de fondo */
+        color: #003d6b; /* Color de texto (azul) */
+    }
+
+    /* Restante del estilo */
+    form {
+        align-items: center;
+        justify-content: center;
+        width: 150%;
+        margin: 30px auto;
+        padding: 20px;
+        background-color: #e0e8f1;
+        border: 1px solid #003d6b;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+    }
+
+    fieldset {
+        border: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    legend {
+        font-size: 1.2em;
+        color: #003d6b;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    label,
+    input[type="text"],
+    select,
+    .submit,
+    h4 {
+        font-size: 1em;
+        font-weight: bold;
+    }
+
+    input[type="text"],
+    select {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #003d6b;
+        border-radius: 4px;
+        background-color: white;
+    }
+
+    input[type="number"],
+    select {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #003d6b;
+        border-radius: 4px;
+        background-color: white;
+    }
+
+    .submit {
+        background-color: #003d6b;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+        .submit:hover {
+            background-color: #002e5d;
+        }
+
+    h4 {
+        color: #003d6b;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    h3 {
+        font-size: 3em ;
+        color: #003d6b;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
+
+    }
+
+    .custom-textarea {
+        width: 100%;
+        height: 150px;
+        resize: none;
+    }
+</style>
