--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -115,6 +115,22 @@
             padding: 0;
         }
 
+        a.btn-action {
+            display: inline-block;
+            text-decoration: none;
+            padding: 8px 12px;
+            margin: 4px;
+            border: 1px solid #003d6b;
+            border-radius: 5px;
+            background-color: #003d6b;
+            color: white; /* Color de texto */
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+            a.btn-action:hover {
+                background-color: #002e5d; /* Color en hover */
+                transform: translateY(-2px);
+            }
         form {
             align-items: center;
             justify-content: center;
@@ -201,6 +217,11 @@
             width: 100%;
             height: 150px;
             resize: none;
+        }
+
+        a.btn-action:hover {
+            background-color: #002e5d; /* Color en hover */
+            transform: translateY(-2px);
         }
     </style>
 }
