--- a/PPTT/Pages/Administradores/Delete.cshtml
+++ b/PPTT/Pages/Administradores/Delete.cshtml
@@ -5,12 +5,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Borrar</h3>
+<h4>¿Estas Seguro de Borrar a Este Usuario?</h4>
+<form method="post">
 <div>
-    <h4>Admin</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Admin.Nombre)
@@ -55,10 +53,128 @@
             @Html.DisplayFor(model => model.Admin.ID_Servicio_Fk)
         </dd>
     </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Admin.ID_Usuario_Pk" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+@*         <input type="hidden" asp-for="Admin.ID_Usuario_Pk" /> *@
+        <input type="submit" value="Borrar" class="btn btn-danger" /> 
     </form>
 </div>
+<a asp-page="./Index">Volver a la Lista</a>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f8ff;
+        color: #003d6b;
+        margin: 0;
+        padding: 0;
+    }
+
+    a.btn-action {
+        display: inline-block;
+        text-decoration: none;
+        padding: 8px 12px;
+        margin: 4px;
+        border: 1px solid #003d6b;
+        border-radius: 5px;
+        background-color: #003d6b;
+        color: white; /* Color de texto */
+        transition: background-color 0.3s, transform 0.3s;
+    }
+
+        a.btn-action:hover {
+            background-color: #002e5d; /* Color en hover */
+            transform: translateY(-2px);
+        }
+
+    form {
+        align-items: center;
+        justify-content: center;
+        width: 60%;
+        margin: 30px auto;
+        padding: 20px;
+        background-color: #e0e8f1;
+        border: 1px solid #003d6b;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+    }
+
+    fieldset {
+        border: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    legend {
+        font-size: 1.2em;
+        color: #003d6b;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    label,
+    input[type="text"],
+    select,
+    .submit,
+    h4 {
+        font-size: 1em;
+        font-weight: bold;
+    }
+
+    input[type="text"],
+    select {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #003d6b;
+        border-radius: 4px;
+        background-color: white;
+    }
+
+    input[type="number"],
+    select {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        border: 1px solid #003d6b;
+        border-radius: 4px;
+        background-color: white;
+    }
+
+    .submit {
+        background-color: #003d6b;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+        .submit:hover {
+            background-color: #002e5d;
+        }
+
+    h4 {
+        color: #003d6b;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    h3 {
+        font-size: 3em;
+        color: #003d6b;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+
+    .custom-textarea {
+        width: 100%;
+        height: 150px;
+        resize: none;
+    }
+
+    a.btn-action:hover {
+        background-color: #002e5d; /* Color en hover */
+        transform: translateY(-2px);
+    }
+</style>
