--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -12,27 +12,27 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Admin.Nombre" class="control-label"></label>
-                <input asp-for="Admin.Nombre" class="form-control" />
+                <input required asp-for="Admin.Nombre" class="form-control" />
                 <span asp-validation-for="Admin.Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Admin.Apellido" class="control-label"></label>
-                <input asp-for="Admin.Apellido" class="form-control" />
+                <input required asp-for="Admin.Apellido" class="form-control" />
                 <span asp-validation-for="Admin.Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Admin.DNI" class="control-label"></label>
-                <input asp-for="Admin.DNI" class="form-control" />
+                <input required asp-for="Admin.DNI" class="form-control" />
                 <span asp-validation-for="Admin.DNI" class="text-danger"></span>
             </div>         
             <div class="form-group">
                 <label asp-for="Admin.Numero_Control" class="control-label"></label>
-                <input asp-for="Admin.Numero_Control" class="form-control" />
+                <input required asp-for="Admin.Numero_Control" class="form-control"/>
                 <span asp-validation-for="Admin.Numero_Control" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Admin.Correo" class="control-label"></label>
-                <input asp-for="Admin.Correo" class="form-control" />
+                <input required asp-for="Admin.Correo" class="form-control" />
                 <span asp-validation-for="Admin.Correo" class="text-danger"></span>
             </div>           
             <div class="form-group">
