--- a/PPTT/Pages/Administradores/Index.cshtml
+++ b/PPTT/Pages/Administradores/Index.cshtml
@@ -126,8 +126,7 @@
         }
     </tbody>
 </table>
-
-<!-- Estilos -->
+<a class="btn-action" asp-page="./Menu">Volver al Menu</a>
 <style>
     body {
         align-items: center;
@@ -173,5 +172,13 @@
     th {
         background-color: #e0e8f1;
         color: #003d6b;
+    }
+
+    h3 {
+        font-size: 3em;
+        color: #003d6b;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
     }
 </style>
