--- a/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPrimeraVez.cshtml
@@ -146,3 +146,6 @@
 <div class="centered-button">
     <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
 </div>
+<div class="centered-button">
+    <a href="/" class="submit">Volver al Menu</a>
+</div>
