--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -108,11 +108,15 @@
     </script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            color: #003d6b;
-            margin: 0;
-            padding: 0;
+            align-items: center;
+            justify-content: center;
+            width: 95%;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #e0e8f1;
+            border: 1px solid #003d6b;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
         }
 
         a.btn-action {
@@ -123,87 +127,30 @@
             border: 1px solid #003d6b;
             border-radius: 5px;
             background-color: #003d6b;
-            color: white; /* Color de texto */
+            color: white;
             transition: background-color 0.3s, transform 0.3s;
         }
 
             a.btn-action:hover {
-                background-color: #002e5d; /* Color en hover */
+                background-color: #002e5d;
                 transform: translateY(-2px);
             }
-        form {
-            align-items: center;
-            justify-content: center;
-            width: 150%;
-            margin: 30px auto;
-            padding: 20px;
-            background-color: #e0e8f1;
-            border: 1px solid #003d6b;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
-        }
 
-        fieldset {
-            border: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        legend {
-            font-size: 1.2em;
-            color: #003d6b;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        label,
-        input[type="text"],
-        select,
-        .submit,
-        h4 {
-            font-size: 1em;
-            font-weight: bold;
-        }
-
-        input[type="text"],
-        select {
+        table {
             width: 100%;
-            padding: 8px;
-            margin-bottom: 15px;
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        input[type="number"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 15px;
-            border: 1px solid #003d6b;
-            border-radius: 4px;
-            background-color: white;
-        }
-
-        .submit {
-            background-color: #003d6b;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-            .submit:hover {
-                background-color: #002e5d;
-            }
-
-        h4 {
-            color: #003d6b;
             margin-top: 20px;
-            margin-bottom: 10px;
-            font-weight: bold;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #e0e8f1;
+            color: #003d6b;
         }
 
         h3 {
@@ -212,16 +159,6 @@
             margin-top: 20px;
             margin-bottom: 10px;
             font-weight: bold;
-        }
-        .custom-textarea {
-            width: 100%;
-            height: 150px;
-            resize: none;
-        }
-
-        a.btn-action:hover {
-            background-color: #002e5d; /* Color en hover */
-            transform: translateY(-2px);
         }
     </style>
 }
