--- a/PPTT/Pages/Vistas/IngresoPersonal.cshtml
+++ b/PPTT/Pages/Vistas/IngresoPersonal.cshtml
@@ -125,4 +125,7 @@
     <div class="centered-button">
         <a href="/Vistas/IngresoPrimeraVez" class="submit">Cambiar Mi Contraseña</a>
     </div>
+    <div class="centered-button">
+        <a href="/" class="submit">Volver al Menu</a>
+    </div>
 </body>
