--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 <form method="get">
-    <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
+    <a href="/PT/Create" class="submit">Subir Peticion de Trabajo</a>
     <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
 </form>
 <style>
