--- a/PPTT/Pages/Vistas/MenuLog.cshtml
+++ b/PPTT/Pages/Vistas/MenuLog.cshtml
@@ -61,7 +61,7 @@
         }
 </style>
 <form method="get">
-    <a href="/Vistas/Orden" class="submit">Subir Peticion de Trabajo</a>
+    <a href="/PT/Create" class="submit">Subir Peticion de Trabajo</a>
     <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajos Asignado Para Ti</a>
 </form>
 <div class="centered-button">
