--- a/PPTT/Pages/Administradores/Menu.cshtml
+++ b/PPTT/Pages/Administradores/Menu.cshtml
@@ -62,7 +62,7 @@
 </style>
 <form method="get">
     <h3>USUARIO</h3>
-    <a href="/PT/Create class="submit">Subir Peticion de Trabajo</a>
+    <a href="/PT/Create" class="submit">Subir Peticion de Trabajo</a>
     <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajo Asignado</a>
 </form>
 <div class="text-center">
