--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -2,13 +2,12 @@
 @model PPTT.Pages.Administradores.CreateModel
 
 @{
-    // VERDADERO
     ViewData["Title"] = "Crear Usuario";
 }
-<h3>Create</h3>
-<div class="row">
-    <div class="col-md-4">
         <form method="post">
+<h3>Crear Usuarios</h3>
+@* <div class="row"> *@
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Admin.Nombre" class="control-label"></label>
@@ -58,14 +57,12 @@
                 <span asp-validation-for="Admin.ID_Servicio_Fk" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>        
-    </div>
-</div>
-
+                <input type="submit" value="Crear" class="btn btn-primary" />
+            </div> 
+@*     </div> *@
+</form> 
 <div>
-    <a asp-page="Index">Volver a la Lista</a>
+    <a class="btn-action" asp-page="./Index">Volver a la lista</a>
 </div>
 
 
@@ -104,19 +101,28 @@
         })    
     </script>
     <style>
-        body {
-            align-items: center;
-            justify-content: center;
-            width: 95%;
-            margin: 30px auto;
-            padding: 20px;
-            background-color: #e0e8f1;
-            border: 1px solid #003d6b;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+     body {
+        background-color: #e0e8f1;
+    }
+    a.btn-action {
+        display: inline-block;
+        text-decoration: none;
+        padding: 8px 12px;
+        margin: 4px;
+        border: 1px solid #003d6b;
+        border-radius: 5px;
+        background-color: #003d6b;
+        color: white;
+        transition: background-color 0.3s, transform 0.3s;
+    }
+
+        a.btn-action:hover {
+            background-color: #002e5d;
+            transform: translateY(-2px);
         }
 
-        a.btn-action {
+
+        input[type=submit] {
             display: inline-block;
             text-decoration: none;
             padding: 8px 12px;
@@ -128,26 +134,85 @@
             transition: background-color 0.3s, transform 0.3s;
         }
 
-            a.btn-action:hover {
+            input[type=submit]:hover {
                 background-color: #002e5d;
                 transform: translateY(-2px);
             }
 
-        table {
-            width: 100%;
-            margin-top: 20px;
-            border-collapse: collapse;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
+        form {
+            align-items: center;
+            justify-content: center;
+            width: 85%;
+            margin: 30px auto;
+            padding: 20px;
             background-color: #e0e8f1;
+            border: 1px solid #003d6b;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
+        }
+
+        legend {
+            font-size: 1.2em;
             color: #003d6b;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        label,
+        input[type="text"],
+        select,
+        .submit,
+        h4 {
+            font-size: 1em;
+            font-weight: bold;
+        }
+
+        input[type="text"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #003d6b;
+            border-radius: 4px;
+            background-color: white;
+        }
+
+        input[type="number"],
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #003d6b;
+            border-radius: 4px;
+            background-color: white;
+        }
+
+        .submit {
+            background-color: #003d6b;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+            .submit:hover {
+                background-color: #002e5d;
+            }
+
+        h4 {
+            color: #003d6b;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        asap-for {
+            color: #003d6b;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: bold;
         }
 
         h3 {
@@ -156,6 +221,17 @@
             margin-top: 20px;
             margin-bottom: 10px;
             font-weight: bold;
+        }
+
+        .custom-textarea {
+            width: 100%;
+            height: 150px;
+            resize: none;
+        }
+
+        a.btn-action:hover {
+            background-color: #002e5d; /* Color en hover */
+            transform: translateY(-2px);
         }
     </style>
 }
