--- a/PPTT/Pages/Administradores/Edit.cshtml
+++ b/PPTT/Pages/Administradores/Edit.cshtml
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <label asp-for="Admin.ID_Division_Fk" class="control-label"></label>
                 <select asp-for="Admin.ID_Division_Fk"
-                        asp-items="Model.Divisions.Select(d=> new SelectListItem
+                        asp-items="Model.Divisions.Select(d => new SelectListItem
                         {
                             Value = d.ID_Division_Pk.ToString(),
                             Text = d.Descripcion_Division
@@ -53,16 +53,16 @@
                 <label asp-for="Admin.ID_Servicio_Fk" id="servicioLabel" class="control-label"></label>
                 <br />
                 <select asp-for="Admin.ID_Servicio_Fk" id="servicioSelect" class="formControl">
-                    <option hidden select value="">Seleccione el servicio correspondiente</option>
+                    <option hidden value="">Seleccione el servicio correspondiente</option>
                 </select>
                 <span asp-validation-for="Admin.ID_Servicio_Fk" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Admin.ID_Rol_Fk" class="control-label"></label>
-                <br />
-                <input asp-for="Admin.ID_Rol_Fk" class="form-control" />
+                <select asp-for="Admin.ID_Rol_Fk" class="form-control" asp-items="Model.Roles">
+                    <option hidden selected value="">Seleccione un rol</option>
+                </select>
                 <span asp-validation-for="Admin.ID_Rol_Fk" class="text-danger"></span>
-
             </div>
             <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
@@ -75,7 +75,6 @@
     <a asp-page="./Index">Volver a la Lista</a>
 </div>
 
-
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
@@ -84,28 +83,28 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#servicioLabel').hide();
-            $('#servicioSelect').hide();            
+            $('#servicioSelect').hide();
             $('#deptSelect').change(function () {
-                var selectedDivision = $(this).val();                
+                var selectedDivision = $(this).val();
                 if (selectedDivision) {
                     $.ajax({
                         url: '@Url.Page("./Edit", "ServiciosByDivision")',
                         type: 'GET',
                         data: { division: selectedDivision },
-                        success: function (data) {                            
+                        success: function (data) {
                             var servicioSelect = $('#servicioSelect');
                             servicioSelect.empty();
-                            servicioSelect.append('<option hidden select value = "">Seleccione el servicio correspondiente</option>< /select>')                            
+                            servicioSelect.append('<option hidden value="">Seleccione el servicio correspondiente</option>');
                             $.each(data, function (index, servicio) {
-                                servicioSelect.append('<option value="' + servicio.iD_Servicio_Pk + '">' + servicio.descripcion_Servicio + '</option>')
-                            })
+                                servicioSelect.append('<option value="' + servicio.iD_Servicio_Pk + '">' + servicio.descripcion_Servicio + '</option>');
+                            });
                             $('#servicioLabel').fadeIn(500);
                             $('#servicioSelect').fadeIn(500);
                         }
-                    })
+                    });
                 }
-            })
-        })
+            });
+        });
     </script>
     <style>
         body {
